--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="STAG.Views.STAGView"
+             xmlns:fas="clr-namespace:FontAwesome.Sharp;assembly=FontAwesome.Sharp"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,46 +9,38 @@
              Width="Auto"
              IsVisibleChanged="Control_VisibleChanged"
 >
-    <Grid
-    Margin="4"
-  >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Label Content="WPF Panel"/>
-        <CheckBox
-      Content="Use multiple counters"
-      Grid.Row="1"
-      IsChecked="{Binding Path=UseMultipleCounters}"
-      Margin="0,4,0,0"
-    />
-        <Button Content="Button 1" Grid.Row="2" Margin="0,4,0,0" Click="Button1_Click"/>
-        <Button Content="Button 2" Grid.Row="3" Margin="0,4,0,0" Click="Button2_Click"/>
-        <Button Content="Button 3" Grid.Row="4" Margin="0,4,0,0" Click="Button3_Click"/>
-        <Button Content="Button 4" Grid.Row="5" Margin="0,4,0,0"/>
-        <TextBox
-      Text="{Binding Path=Message}"
-      Grid.Row="6"
-      Margin="0,4,0,0"
-      IsReadOnly="True"
-      AcceptsReturn="True"
-      TextWrapping="WrapWithOverflow"
-      MinHeight="20"
-    />
-        <TextBox
-      Text="{Binding Path=SettingsChangedMessage}"
-      Grid.Row="7"
-      Margin="0,4,0,0"
-      IsReadOnly="True"
-      AcceptsReturn="True"
-      TextWrapping="WrapWithOverflow"
-    />
-    </Grid>
+    <StackPanel Margin="10">
+        <!-- Stage Input -->
+        <TextBlock Text="Define your stage:" Margin="0,0,0,5"/>
+
+        <DockPanel>
+            <TextBox x:Name="StageInput"
+                     FontSize = "12"
+                     Width="200"
+                     Height="25"
+                     VerticalContentAlignment="Center"
+                     Margin="0,0,5,0"/>
+
+            <Button Width="25" Height="25" Click="AddStage_Click"
+                    Background="#EEE" BorderBrush="Gray" Padding="0">
+                <Viewbox Stretch="Uniform">
+                    <Grid Width="20" Height="20">
+                        <fas:IconBlock Icon="Plus" Foreground="Black"/>
+                    </Grid>
+                </Viewbox>
+            </Button>
+        </DockPanel>
+
+        <!-- Stage List -->
+        <TextBlock Text="Stages:" Margin="0,10,0,5"/>
+
+        <!-- Scrollable ListBox for up to 8 items -->
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Height="520">
+            <ListBox x:Name="StageListBox"
+                     BorderThickness="1"
+                     BorderBrush="LightGray"
+                     Padding="4"
+                     ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
+        </ScrollViewer>
+    </StackPanel>
 </UserControl>
