--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -1,46 +1,65 @@
 ﻿<UserControl x:Class="STAG.Views.STAGView"
-             xmlns:fas="clr-namespace:FontAwesome.Sharp;assembly=FontAwesome.Sharp"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:fas="clr-namespace:FontAwesome.Sharp;assembly=FontAwesome.Sharp"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             Height="Auto"
-             Width="Auto"
-             IsVisibleChanged="Control_VisibleChanged"
->
-    <StackPanel Margin="10">
-        <!-- Stage Input -->
-        <TextBlock Text="Define your stage:" Margin="0,0,0,5"/>
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:STAG.Views"
+             mc:Ignorable="d" 
+             Height="Auto" Width="Auto">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <DockPanel>
-            <TextBox x:Name="StageInput"
-                     FontSize = "12"
-                     Width="200"
-                     Height="25"
-                     VerticalContentAlignment="Center"
-                     Margin="0,0,5,0"/>
+        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="0 5 0 0" >
+            <StackPanel Orientation="Horizontal" Margin="5">
+                <TextBox Text="{Binding NewStageName,Mode=TwoWay}"  Margin="0,0,10,0"/>
+                <Button  Command="{Binding AddStage}">
+                    <fas:IconBlock Icon="Add" Foreground="Black" Width="16" Height="16"/>
+                </Button>
+            </StackPanel>
 
-            <Button Width="25" Height="25" Click="AddStage_Click"
-                    Background="#EEE" BorderBrush="Gray" Padding="0">
-                <Viewbox Stretch="Uniform">
-                    <Grid Width="20" Height="20">
-                        <fas:IconBlock Icon="Plus" Foreground="Black"/>
-                    </Grid>
-                </Viewbox>
-            </Button>
-        </DockPanel>
-
-        <!-- Stage List -->
-        <TextBlock Text="Stages:" Margin="0,10,0,5"/>
-
-        <!-- Scrollable ListBox for up to 8 items -->
-        <ScrollViewer VerticalScrollBarVisibility="Auto" Height="520">
-            <ListBox x:Name="StageListBox"
-                     BorderThickness="1"
-                     BorderBrush="LightGray"
-                     Padding="4"
-                     ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
-        </ScrollViewer>
-    </StackPanel>
+         
+            <ListBox ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5} " >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Vertical" Margin="0 5 0 0" >
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <TextBox Text="{Binding StageName,Mode=TwoWay}"  Margin="0,0,10,0"/>
+                                <Button  Command="{Binding MoveUp}" >
+                                    <fas:IconBlock Icon="ArrowAltCircleUp" Foreground="Black" Width="16" Height="16"/>
+                                </Button>
+                                <Button  Command="{Binding MoveDown}">
+                                    <fas:IconBlock Icon="ArrowAltCircleDown" Foreground="Black" Width="16" Height="16"/>
+                                </Button>
+                                <Button  Command="{Binding RemoveStageCommand}" CommandParameter="{Binding}">
+                                    <fas:IconBlock Icon="Minus" Foreground="Black" Width="16" Height="16"/>
+                                </Button>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5">
+                                <CheckBox  IsChecked="{Binding IsGeometricalEditable}" >
+                                    <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16"/>
+                                </CheckBox>
+                                <CheckBox  IsChecked="{Binding IsTranslationEditable}" >
+                                    <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16"/>
+                                </CheckBox>
+                                <CheckBox  IsChecked="{Binding IsAttributesEditable}" >
+                                    <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16"/>
+                                </CheckBox>
+                                <CheckBox  IsChecked="{Binding IsUserTextsEditable}" >
+                                    <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16"/>
+                                </CheckBox>
+                            </StackPanel>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+      
+        </StackPanel>
+    </Grid>
 </UserControl>
+
+
+
