--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -8,55 +8,102 @@
              xmlns:vm="clr-namespace:STAG.ViewModels"
              mc:Ignorable="d" 
              Height="Auto" Width="Auto">
+
+    <UserControl.Resources>
+        <!-- Declare the converter as a resource -->
+        <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" Margin="5">
-            <TextBox Text="{Binding NewStageName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Margin="0,0,10,0" Width="100"/>
-            <Button  Command="{Binding AddNewStageCommand}">
-                <fas:IconBlock Icon="Plus" Foreground="Black" Width="16" Height="16"/>
-            </Button>
-        </StackPanel>
+
+
+        <Expander Grid.Row="0" Header="Add/Remove/Reorder Stages">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <TextBox Text="{Binding NewStageName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Margin="0,0,10,0" Width="100"/>
+                    <Button  Command="{Binding AddNewStageCommand}">
+                        <fas:IconBlock Icon="Plus" Foreground="Black" Width="16" Height="16"/>
+                    </Button>
+                </StackPanel>
+
+                <ListBox Grid.Row="1" ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Vertical" Margin="0 5 0 0">
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <TextBox Text="{Binding StageName,Mode=TwoWay}" Margin="0,0,10,0"/>
+                                    <Button Command="{Binding DataContext.MoveStageUpCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                    CommandParameter="{Binding}">
+                                        <fas:IconBlock Icon="ArrowAltCircleUp" Foreground="Black" Width="16" Height="16"/>
+                                    </Button>
+                                    <Button Command="{Binding DataContext.MoveStageDownCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                    CommandParameter="{Binding}">
+                                        <fas:IconBlock Icon="ArrowAltCircleDown" Foreground="Black" Width="16" Height="16"/>
+                                    </Button>
+                                    <Button Command="{Binding DataContext.RemoveStageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                    CommandParameter="{Binding}">
+                                        <fas:IconBlock Icon="Minus" Foreground="Black" Width="16" Height="16"/>
+                                    </Button>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Margin="5">
+                                    <ToggleButton IsChecked="{Binding IsGeometricalEditable}">
+                                        <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16"/>
+                                    </ToggleButton>
+                                    <ToggleButton IsChecked="{Binding IsTranslationEditable}">
+                                        <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16"/>
+                                    </ToggleButton>
+                                    <ToggleButton IsChecked="{Binding IsAttributesEditable}">
+                                        <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16"/>
+                                    </ToggleButton>
+                                    <ToggleButton IsChecked="{Binding IsUserTextsEditable}">
+                                        <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16"/>
+                                    </ToggleButton>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
+        </Expander>
 
         <ListBox Grid.Row="1" ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Vertical" Margin="0 5 0 0">
-                        <StackPanel Orientation="Horizontal" Margin="5">
-                            <TextBox Text="{Binding StageName,Mode=TwoWay}" Margin="0,0,10,0"/>
-                            <Button Command="{Binding DataContext.MoveStageUpCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                <fas:IconBlock Icon="ArrowAltCircleUp" Foreground="Black" Width="16" Height="16"/>
-                            </Button>
-                            <Button Command="{Binding DataContext.MoveStageDownCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                <fas:IconBlock Icon="ArrowAltCircleDown" Foreground="Black" Width="16" Height="16"/>
-                            </Button>
-                            <Button Command="{Binding DataContext.RemoveStageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                <fas:IconBlock Icon="Minus" Foreground="Black" Width="16" Height="16"/>
-                            </Button>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="5">
-                            <ToggleButton IsChecked="{Binding IsGeometricalEditable}">
-                                <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16"/>
-                            </ToggleButton>
-                            <ToggleButton IsChecked="{Binding IsTranslationEditable}">
-                                <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16"/>
-                            </ToggleButton>
-                            <ToggleButton IsChecked="{Binding IsAttributesEditable}">
-                                <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16"/>
-                            </ToggleButton>
-                            <ToggleButton IsChecked="{Binding IsUserTextsEditable}">
-                                <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16"/>
-                            </ToggleButton>
-                        </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Index}" Margin="5 0"/>
+                        <TextBlock Text="{Binding StageName}" Margin="5 0"/>
+                        <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16" Margin="5 0" 
+                                       Visibility="{Binding ElementName=IsGeometricalEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                        <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding ElementName=IsTranslationEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                        <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding ElementName=IsAttributesEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                        <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding ElementName=IsUserTextsEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+
+
+
                     </StackPanel>
+
                 </DataTemplate>
             </ListBox.ItemTemplate>
+
         </ListBox>
+
     </Grid>
 </UserControl>
