--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -24,9 +24,64 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
+        <Border Grid.Row="0"  CornerRadius="6" BorderThickness="1" Background="White" Margin="5">
+            <ListBox x:Name="ReportListBox" ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5}"
+                                                  BorderThickness="0"
+                             BorderBrush="LightGray"
+                             Background="Transparent"
+                             Padding="4"
+>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+
+                            <TextBlock Text="{Binding StageName}" Margin="5 0"/>
+                            <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16" Margin="5 0" 
+                                       Visibility="{Binding IsGeometricalEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                            <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding IsTranslationEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                            <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding IsAttributesEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                            <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16" Margin="5 0"
+                                       Visibility="{Binding IsUserTextsEditable,
+                                        Converter={StaticResource BoolToVisConverter}}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Border>
+
+        <Border Grid.Row="2"  CornerRadius="6" BorderThickness="1" Background="White" Margin="5">
 
 
-        <Expander Grid.Row="0" Header="Add/Remove/Reorder Stages">
+            <Grid  Height="30" Margin="5 20">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="5"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Command="{Binding DowngradeSelectedObjectsStagesCommand}" Grid.Column="0"  Margin="5 0" 
+                        HorizontalContentAlignment="Center" Background="Transparent"
+                        ToolTip="Downgrade Selected Objects" ToolTipService.InitialShowDelay="0">
+                    <fas:IconBlock Icon="ChessPawn" Foreground="Black"/>
+                </Button>
+                <Button Command="{Binding UpgradeSelectedObjectsStagesCommand}" Grid.Column="1" Margin="5 0" 
+                        HorizontalContentAlignment="Center" Background="Transparent"
+                        ToolTip="Upgrade Selected Objects" ToolTipService.InitialShowDelay="0">
+                    <fas:IconBlock Icon="ChessQueen" Foreground="Black"/>
+                </Button>
+
+                <TextBlock Text="{Binding SelectedStage.StageName, Mode=OneWay}" Margin="5 0"
+                       VerticalAlignment="Center" FontWeight="Bold"/>
+
+            </Grid>
+        </Border>
+
+        <Expander Grid.Row="4" Header="Add/Remove/Reorder Stages" Margin="5 0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -43,86 +98,83 @@
                             Height="25"
                             VerticalAlignment="Center">
                         <TextBox Text="{Binding NewStageName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                 Padding="3 0"
                                 FontSize="12"
                                 Background="Transparent"
                                 BorderThickness="0"
                                 Height="Auto"
                                 VerticalContentAlignment="Center"
                                 FocusVisualStyle="{x:Null}">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="KeyDown">
-                                        <i:InvokeCommandAction Command="{Binding StageInputKeyDownCommand}" PassEventArgsToCommand="True" />
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="KeyDown">
+                                    <i:InvokeCommandAction Command="{Binding StageInputKeyDownCommand}" PassEventArgsToCommand="True" />
                                 </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </TextBox>              
+                            </i:Interaction.Triggers>
+                        </TextBox>
                     </Border>
 
-                    <Button  Command="{Binding AddNewStageCommand}" Width="25" Height="25" >
+                    <Button  Command="{Binding AddNewStageCommand}" Width="25" Height="25">
                         <fas:IconBlock Icon="Plus" Foreground="Black"/>
                     </Button>
                 </StackPanel>
 
-                <ListBox Grid.Row="1" x:Name="EditListBox" ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Vertical" Margin="0 5 0 0">
-                                <StackPanel Orientation="Horizontal" Margin="5">
-                                    <TextBox Text="{Binding StageName,Mode=TwoWay}" Margin="0,0,10,0"/>
-                                    <Button Command="{Binding DataContext.MoveStageUpCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                        <fas:IconBlock Icon="ArrowAltCircleUp" Foreground="Black" Width="16" Height="16"/>
-                                    </Button>
-                                    <Button Command="{Binding DataContext.MoveStageDownCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                        <fas:IconBlock Icon="ArrowAltCircleDown" Foreground="Black" Width="16" Height="16"/>
-                                    </Button>
-                                    <Button Command="{Binding DataContext.RemoveStageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
-                                    CommandParameter="{Binding}">
-                                        <fas:IconBlock Icon="Minus" Foreground="Black" Width="16" Height="16"/>
-                                    </Button>
+
+                <Border Grid.Row="1"  CornerRadius="6" BorderThickness="1" Background="White" Margin="5">
+                    <ListBox x:Name="EditListBox"
+                             MaxHeight="293"
+                             BorderThickness="0"
+                             BorderBrush="LightGray"
+                             Background="Transparent"
+                             Padding="4"
+                             ScrollViewer.VerticalScrollBarVisibility="Auto"
+                             ScrollViewer.CanContentScroll="True"
+                             ItemsSource="{Binding StageConstraints}" 
+                             d:ItemsSource="{d:SampleData ItemCount =5}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Vertical" Margin="0 5 0 0">
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <TextBox Text="{Binding StageName,Mode=TwoWay}" Margin="0,0,10,0" Width="220" Height="25" VerticalContentAlignment="Center"/>
+                                        <Button Command="{Binding DataContext.MoveStageUpCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                                
+                                    CommandParameter="{Binding}"
+                                                Width="25" Height="25" Margin="2 0">
+                                            <fas:IconBlock Icon="ArrowUp" Foreground="Black"/>
+                                        </Button>
+                                        <Button Command="{Binding DataContext.MoveStageDownCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                    CommandParameter="{Binding}" Width="25" Height="25" Margin="2 0">
+                                            <fas:IconBlock Icon="ArrowDown" Foreground="Black"/>
+                                        </Button>
+                                        <Button Command="{Binding DataContext.RemoveStageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                                    CommandParameter="{Binding}" Width="25" Height="25" Margin="2 0">
+                                            <fas:IconBlock Icon="Minus" Foreground="Black"/>
+                                        </Button>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal" Margin="5 0">
+                                        <ToggleButton IsChecked="{Binding IsGeometricalEditable}" Width="25" Height="25" Margin="0 0 2 0" Background="Transparent"
+                                                      ToolTip="Allow Geometrical Operations (Trim, boolean, etc)" ToolTipService.InitialShowDelay="0">
+                                            <fas:IconBlock Icon="Cubes" Foreground="Black"/>
+                                        </ToggleButton>
+                                        <ToggleButton IsChecked="{Binding IsTranslationEditable}" Width="25" Height="25" Margin="0 0 2 0" Background="Transparent"
+                                                      ToolTip="Allow Transformation Operations (Move, Scale, Rotate, etc)" ToolTipService.InitialShowDelay="0">
+                                            <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" />
+                                        </ToggleButton>
+                                        <ToggleButton IsChecked="{Binding IsAttributesEditable}" Width="25" Height="25" Margin="0 0 2 0" Background="Transparent"
+                                                      ToolTip="Allow Attribute Modifications (Name, Color, etc)" ToolTipService.InitialShowDelay="0">
+                                            <fas:IconBlock Icon="Tags" Foreground="Black"/>
+                                        </ToggleButton>
+                                        <ToggleButton IsChecked="{Binding IsUserTextsEditable}" Width="25" Height="25" Margin="0 0 2 0" Background="Transparent"
+                                                      ToolTip="Allow UserText Modifications" ToolTipService.InitialShowDelay="0">
+                                            <fas:IconBlock Icon="Font" Foreground="Black"/>
+                                        </ToggleButton>
+                                    </StackPanel>
                                 </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="5">
-                                    <ToggleButton IsChecked="{Binding IsGeometricalEditable}">
-                                        <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16"/>
-                                    </ToggleButton>
-                                    <ToggleButton IsChecked="{Binding IsTranslationEditable}">
-                                        <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16"/>
-                                    </ToggleButton>
-                                    <ToggleButton IsChecked="{Binding IsAttributesEditable}">
-                                        <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16"/>
-                                    </ToggleButton>
-                                    <ToggleButton IsChecked="{Binding IsUserTextsEditable}">
-                                        <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16"/>
-                                    </ToggleButton>
-                                </StackPanel>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Border>
             </Grid>
         </Expander>
 
-        <ListBox Grid.Row="2" x:Name="ReportListBox" ItemsSource="{Binding StageConstraints}" d:ItemsSource="{d:SampleData ItemCount =5}">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Index}" Margin="5 0"/>
-                        <TextBlock Text="{Binding StageName}" Margin="5 0"/>
-                        <fas:IconBlock Icon="Cubes" Foreground="Black" Width="16" Height="16" Margin="5 0" 
-                                       Visibility="{Binding IsGeometricalEditable,
-                                        Converter={StaticResource BoolToVisConverter}}"/>
-                        <fas:IconBlock Icon="ArrowsAlt" Foreground="Black" Width="16" Height="16" Margin="5 0"
-                                       Visibility="{Binding IsTranslationEditable,
-                                        Converter={StaticResource BoolToVisConverter}}"/>
-                        <fas:IconBlock Icon="Tags" Foreground="Black" Width="16" Height="16" Margin="5 0"
-                                       Visibility="{Binding IsAttributesEditable,
-                                        Converter={StaticResource BoolToVisConverter}}"/>
-                        <fas:IconBlock Icon="Font" Foreground="Black" Width="16" Height="16" Margin="5 0"
-                                       Visibility="{Binding IsUserTextsEditable,
-                                        Converter={StaticResource BoolToVisConverter}}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
     </Grid>
 </UserControl>
