--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -22,6 +22,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="5"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="5"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0"  CornerRadius="6" BorderThickness="1" Background="White" Margin="5">
@@ -57,31 +59,56 @@
         <Border Grid.Row="2"  CornerRadius="6" BorderThickness="1" Background="White" Margin="5">
 
 
-            <Grid  Height="30" Margin="5 20">
+            <Grid Margin="5 5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="5"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="5"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
 
-                <Button Command="{Binding DowngradeSelectedObjectsStagesCommand}" Grid.Column="0"  Margin="5 0" 
+                <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0"  Background="DimGray" CornerRadius="3">
+                    
+                <TextBlock Text="Upgrade/Downgrade"  Foreground="LightGray" HorizontalAlignment="Center" Margin="5 0"/>
+                </Border>
+                <Button Command="{Binding DowngradeSelectedObjectsStagesCommand}" Grid.Column="0" Grid.Row="1"  Margin="0 5 5 5" 
                         HorizontalContentAlignment="Center" Background="Transparent"
                         ToolTip="Downgrade Selected Objects" ToolTipService.InitialShowDelay="0">
                     <fas:IconBlock Icon="ChessPawn" Foreground="Black"/>
                 </Button>
-                <Button Command="{Binding UpgradeSelectedObjectsStagesCommand}" Grid.Column="1" Margin="5 0" 
+                <Button Command="{Binding UpgradeSelectedObjectsStagesCommand}" Grid.Column="2" Grid.Row="1" Margin="5 5 0 5" 
                         HorizontalContentAlignment="Center" Background="Transparent"
                         ToolTip="Upgrade Selected Objects" ToolTipService.InitialShowDelay="0">
                     <fas:IconBlock Icon="ChessQueen" Foreground="Black"/>
                 </Button>
 
-                <TextBlock Text="{Binding SelectedStage.StageName, Mode=OneWay}" Margin="5 0"
-                       VerticalAlignment="Center" FontWeight="Bold"/>
+                <Border Grid.Column="4" Grid.ColumnSpan="3" Grid.Row="0"  Background="DimGray" CornerRadius="3">
 
+                    <TextBlock Text="Display"  Foreground="LightGray" HorizontalAlignment="Center" Margin="5 0"/>
+                </Border>
+                <Button Command="{Binding ShowCurrentStagesCommand}" Grid.Column="4" Grid.Row="1" Margin="0 5 5 5" 
+                        HorizontalContentAlignment="Center" Background="Transparent"
+                        ToolTip="Display Current Stages" ToolTipService.InitialShowDelay="0">
+                    <fas:IconBlock Icon="Eye" Foreground="Black"/>
+                </Button>
+                <Button Command="{Binding HideCurrentStagesCommand}" Grid.Column="6" Grid.Row="1" Margin="5 5 0 5"  
+                        HorizontalContentAlignment="Center" Background="Transparent"
+                        ToolTip="Hide Current Stages" ToolTipService.InitialShowDelay="0">
+                    <fas:IconBlock Icon="EyeSlash" Foreground="Black"/>
+                </Button>
             </Grid>
         </Border>
 
-        <Expander Grid.Row="4" Header="Add/Remove/Reorder Stages" Margin="5 0">
+
+
+        <Expander Grid.Row="6" Header="Add/Remove/Reorder Stages" Margin="5 0">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
