--- a/Views/STAGView.xaml
+++ b/Views/STAGView.xaml
@@ -179,7 +179,23 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Vertical" Margin="0 5 0 0">
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <TextBox Text="{Binding StageName,Mode=TwoWay}" Margin="0,0,10,0" Width="220" Height="25" VerticalContentAlignment="Center"/>
+                                        <Border Width="32" Height="25" CornerRadius="6 0 0 6" Background="{Binding StageColor}" 
+                                                                                            BorderBrush="Gray" BorderThickness="1"
+/>
+                                        <Border CornerRadius="0 6 6 0"
+                                            BorderBrush="Gray"
+                                            BorderThickness="1"
+                                            Background="White"
+                                            Margin="-1,0,10,0"
+                                            Width="200"
+                                            Height="25"
+                                            VerticalAlignment="Center">
+                                            <TextBox Text="{Binding StageName,Mode=TwoWay}" 
+                                                     Padding="3 0"
+                                                     Background="Transparent"
+                                                     BorderThickness="0"
+                                                     Margin="0,0,10,0" Width="220" Height="25" VerticalContentAlignment="Center"/>
+                                        </Border>
                                         <Button Command="{Binding DataContext.MoveStageUpCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                                 
                                     CommandParameter="{Binding}"
